[project]
name = "optimization-model"
version = "0.1.0"
description = "Tilburg area development optimization case"
requires-python = ">=3.12"
dependencies = [
    "matplotlib",
    "numpy",
    "requests>=2.32.5",
    "scipy",
    "urllib3>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["genetic_algorithm_pfm"]

[tool.uv]
managed = true
package = true